Update_normal_metodo_optimizacion
Ya le agregamos que modifique la direccion del eigenvector a su direccion contraria si este apunta hacia dentro de la figura :) así que ya solo queda hacer las pruebas en el programa principal

Por: LAGR

--- a/Meshfree_AdvancingFront.ipynb
+++ b/Meshfree_AdvancingFront.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 62,
    "id": "ee3b23f4-6028-4f0b-99a7-7bfb007781d9",
    "metadata": {
     "tags": []
@@ -393,7 +393,7 @@
     "            Objetivo      ->    Saber si los eigenvectores apuntan para \n",
     "                                afuera o para adentro\n",
     "    Datos de salida:\n",
-    "        normal_vec_:\n",
+    "        normal_vec_: eig_1 or eig_2\n",
     "            Dimensiones    ->    (renglones,columnas)\n",
     "                                 (       1,        2)\n",
     "            Objetivo       ->    Saber la direccion a la que apunta \n",
@@ -421,8 +421,8 @@
     "    #a q indice de eigenvector y como solo ex una matriz de 2x2\n",
     "    #si un eigenvalor no corresponde a eig_vec 1 corresponde al dos\n",
     "    #así de simple\n",
-    "    eigvec_1 = R[1][0][0],R[1][1][0],R[1][2][0]\n",
-    "    eigvec_2 = R[1][0][1],R[1][1][1],R[1][2][1]\n",
+    "    eigvec_1 = R[1][0][0],R[1][1][0]\n",
+    "    eigvec_2 = R[1][0][1],R[1][1][1]\n",
     "    \n",
     "    #Con el siguiente código se comprueba que eigenvalor esta\n",
     "    #asocidado a cada eigenvector con la ecuacion de eigenvalores y eigenvectores\n",
@@ -436,24 +436,54 @@
     "    for i in range(0,2):\n",
     "        x += sum_M[0][i]*eig_1[i]\n",
     "        y += sum_M[1][i]*eig_1[i]\n",
-    "        z += sum_M[2][i]*eig_1[i]\n",
     "    \n",
     "    #Ahora elegimos el eigenvalor más pequeño que es el que queremos\n",
     "    #encontrar y según cual sea regresaremos el eigenvector correspondiente\n",
     "    # y el punto \n",
-    "    if R_v[0]>R_v[1]:\n",
+    "\n",
+    "    \n",
+    "    #Esta variable guardara el menor valor de una sola vez para\n",
+    "    #poder ya trabajar con el eigenvalor menor\n",
+    "    eig_valor = R_v[1]*(R_v[0]>R_v[1]) + R_v[0]*(R_v[1]>R_v[0])\n",
+    "            \n",
+    "    #Creamos la derecha e izquierada de la ec1\n",
+    "    izq_ecuacion = np.around((eig_valor*np.array(eig_1)).real,5)\n",
+    "    der_ecuacion = np.round(np.array([x,y]),5)\n",
     "        \n",
-    "        #Creamos la derecha e izquierada de la ec1\n",
-    "        izq_ecuacion = np.around((R_v[1]*np.array(eig_1)).real,5)\n",
-    "        der_ecuacion = np.round(np.array([x,y,z]),5)\n",
+    "    #Si son iguales regresaremos ese eigen_vector, pero\n",
+    "    #ya puesto para que apunte fuera de la figura y si no\n",
+    "    #regresamos el otro\n",
+    "    if (der_ecuacion == izq_ecuacion).all() == True:\n",
+    "        print(eig_valor)    \n",
+    "        #Comprobación de si apunta dentro o fuera\n",
+    "        #--------------------------------------------------------------------------------------------------añadir comprobacion\n",
+    "        #Para la comprobacion si esta dentro o fuera hay que calcular\n",
+    "        #apartir del punto al que sera normal\n",
+    "        x_final = eig_1[0]*0.01 + pt_c_u[0]\n",
+    "        y_final = eig_1[1]*0.01 + pt_c_u[1]\n",
     "        \n",
-    "        #Si son iguales regresamos ese eigenvector\n",
-    "        if (der_ecuacion == izq_ecuacion).all() == True:\n",
-    "            return \n",
+    "        #Si esta fuera entonces hay que voltear la direccion del eigenvector\n",
+    "        if (sh.contains(poly,Point(x_final,y_final))) == False:\n",
+    "            eig_1 *=-1\n",
+    "            \n",
+    "        return eig_1,pt_c_u\n",
+    "    else:\n",
+    "        print(eig_valor)\n",
+    "        #Para la comprobacion si esta dentro o fuera hay que calcular\n",
+    "        #apartir del punto al que sera normal\n",
+    "        x_final = eig_2[0]*0.01 + pt_c_u[0]\n",
+    "        y_final = eig_2[1]*0.01 + pt_c_u[1]\n",
+    "                \n",
+    "        \n",
+    "        #Si esta fuera entonces hay que voltear la direccion del eigenvector\n",
+    "        if (sh.contains(poly,Point(x_final,y_final))) == False:\n",
+    "            eig_2 *=-1\n",
+    "        return eig_2,pt_c_u\n",
+    "    print(\"FALLLO CRITICO LA FUNCION NO HA CUMPLIDO EL OBJETIVO\")\n",
     "    return None\n",
     "    \n",
     "\n",
-    "def normal_metodo_optimizacion(pts_nhd,pt_c,f):\n",
+    "def normal_metodo_optimizacion(pts_nhd,pt_c,f,Figura):\n",
     "    \"\"\"\n",
     "    Objetivo: Se busca poder calcular la normal de los puntos de un poligono\n",
     "    por medio del metodo de optimizacion presentado en el articulo\n",
@@ -472,18 +502,22 @@
     "        f:\n",
     "            String\n",
     "            Opciones permitidas: \"Gaussian\",\"Inverse\",\"Polynomal\",\"Identity\",\"Laplacian\",\"Cousine\"\n",
-    "            \n",
+    "        \n",
+    "        Figura:\n",
+    "            Classe Polygon \n",
+    "            Objetivo       -> Ayudarnos a saber que el eigenvector que sera el normal\n",
+    "                              apunta hacia afuera\n",
     "    Dato de salida:\n",
     "        Normal:\n",
     "            Dimensiones   ->    (renglones,columnas)\n",
-    "                                (        1,       4)\n",
+    "                               (        1,       4)\n",
     "            Se busca que este dato sea el vector normal al punto ya normalizado (x1,y1,x2,y2)\n",
     "            donde x1,y1 representen donde inicia y x2y2 donde termina\n",
     "    \"\"\"\n",
     "    #Como podriamos modificar los valores, no queremos que haya problemas\n",
     "    arr_u = np.array(arr, copy=True)\n",
     "    pt_c_u =  np.array(pt_c, copy=True)\n",
-    "    \n",
+    "#     \n",
     "    #Aquí guardaremos la suma de todas las matrices generadas\n",
     "    sum_M =np.zeros((2,2),np.float64)\n",
     "    \n",
@@ -509,12 +543,11 @@
     "    \n",
     "    sum_M = C_matrix_normal(sum_M,arr_u,pt_c_u,dif_ij)\n",
     "    \n",
-    "\n",
-    "    Eigen = np.linalg.eig(sum_M)\n",
-    "    print(Eigen)\n",
-    "    #Ahora solucionamos M\n",
-    "    Eigen = scipy.linalg.eig(sum_M)\n",
-    "    return "
+    "    #Ahora sacamos el eigenvector util\n",
+    "    Eigen_data_data = C_eigen_normal(sum_M,pt_c_u,Figura)\n",
+    "    \n",
+    "    #Ya con el eigenvector normal ya devolvemos la informacion que queremos\n",
+    "    return Eige_data_data[0]"
    ]
   },
   {
@@ -543,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 22,
    "id": "a0b36a1a-0fab-4976-8942-e6fc3e64ce8e",
    "metadata": {},
    "outputs": [
@@ -556,7 +589,7 @@
        "<POLYGON ((0.399 -7.954, 0.399 -7.954, 0.518 -7.31, 0.685 -6.786, 0.828 -6.3...>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1153,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 57,
    "id": "8baa3aa2-2929-45ef-95ac-f4560bfec175",
    "metadata": {},
    "outputs": [
@@ -1161,27 +1194,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.63299316+0.j 3.26598632+0.j 1.63299316+0.j]\n",
-      "[1.63299 3.26599 1.63299]\n",
-      "1.6329931618554516 3.2659863237109046 1.632993161855452\n"
+      "[ 0.70710678-0.j -0.70710678+0.j]\n",
+      "[ 0.70711 -0.70711]\n",
+      "(-1.0000000000000004+0j)\n",
+      "(array([-1.,  3.]), array([[-0.70710678, -0.31622777],\n",
+      "       [ 0.70710678, -0.9486833 ]]))\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([ True,  True,  True])"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "#Matrix 3x3\n",
-    "A = np.array([[0,1,2],\n",
-    "              [3,2,1],\n",
-    "              [1,1,1]])\n",
+    "A = np.array([[0,1],\n",
+    "              [3,2]])\n",
     "\n",
     "#Eigenvalores \n",
     "R_v = scipy.linalg.eigvals(A)\n",
@@ -1190,11 +1214,11 @@
     "R = np.linalg.eig(A)\n",
     "\n",
     "#Eigenvectores\n",
-    "eig_1 = R[1][0][0],R[1][1][0],R[1][2][0]\n",
+    "eig_1 = R[1][0][0],R[1][1][0]#,R[1][2][0]\n",
     "#print(eig_1)\n",
-    "eig_2 = R[1][0][1],R[1][1][1],R[1][2][1]\n",
+    "eig_2 = R[1][0][1],R[1][1][1]#,R[1][2][1]\n",
     "#print(eig_2)\n",
-    "eig_3 = R[1][0][2],R[1][1][2],R[1][2][2]\n",
+    "#eig_3 = R[1][0][2],R[1][1][2],R[1][2][2]\n",
     "#print(eig_3)\n",
     "\n",
     "#De esta manera convirmamos que sean eigenvectore\n",
@@ -1208,18 +1232,18 @@
     "x=0\n",
     "y=0\n",
     "z=0\n",
-    "for i in range(0,3):\n",
+    "for i in range(0,2):\n",
     "    x += A[0][i]*eig_1[i]\n",
     "    y += A[1][i]*eig_1[i]\n",
-    "    z += A[2][i]*eig_1[i]\n",
-    "print(x,y,z)\n",
-    "der_ecuacion = np.round(np.array([x,y,z]),5)\n",
-    "der_ecuacion == izq_ecuacion"
+    "    #z += A[2][i]*eig_1[i]\n",
+    "print(R_v[0] )\n",
+    "print(R)\n",
+    "der_ecuacion = np.round(np.array([x,y]),5)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "id": "c4be2211-4a54-45e7-a7a9-9285d042cac3",
    "metadata": {},
    "outputs": [
@@ -1234,6 +1258,61 @@
    "source": [
     "if (der_ecuacion == izq_ecuacion).all() == True:\n",
     "    print(\"Todos iguales\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "2e114040-3266-4ee7-889a-149fe92d0571",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([-1.,  3.]),\n",
+       " array([[-0.70710678, -0.31622777],\n",
+       "        [ 0.70710678, -0.9486833 ]]))"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Figura = 0\n",
+    "eig_valor = R_v[1]*(R_v[0]>R_v[1]) + R_v[0]*(R_v[1]>R_v[0])\n",
+    "\n",
+    "R\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "a2a55cb4-47b1-4893-98de-4cfdadc46bed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(-1.0000000000000004+0j)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "((-0.7071067811865476, 0.7071067811865475), (1, 2))"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = C_eigen_normal(A,(1,2),Figura=1)\n",
+    "a"
    ]
   }
  ],
