Reparando_lasfunciones_de_optimizacion_normal
Habia autenticos fallos en las funciones de normalización por lo que se tuvieron que reparar pues había una tupla que se hacia cero al multiplicarla por un -1 y otro fallo que se me olvido documentar

Por:LAGR

--- a/Meshfree_AdvancingFront.ipynb
+++ b/Meshfree_AdvancingFront.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "id": "ee3b23f4-6028-4f0b-99a7-7bfb007781d9",
    "metadata": {
     "tags": []
@@ -336,7 +336,7 @@
     "    if f == \"Gaussian\":\n",
     "        f = \"(1/(delta*(2*np.pi)**0.5))*np.exp(-magnitude2/(2*delta**2))\"\n",
     "    \n",
-    "    print(dif_ij)\n",
+    "    #print(dif_ij)\n",
     "    #Por como guardamos los puntos la transpuesta es la normal y viceversa\n",
     "    #pero se sigue el mismo procedimiento descrito arriba\n",
     "    for j in range(0,len(arr_u)):\n",
@@ -547,7 +547,7 @@
     "    Eigen_data_data = C_eigen_normal(sum_M,pt_c_u,Figura)\n",
     "    \n",
     "    #Ya con el eigenvector normal ya devolvemos la informacion que queremos\n",
-    "    return Eige_data_data[0]"
+    "    return Eigen_data_data[0]"
    ]
   },
   {
@@ -1043,35 +1043,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "6b4b3046-dc76-4985-92fc-9918c87653c7",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\andre\\AppData\\Local\\Temp\\ipykernel_6460\\2646097903.py:291: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-      "  if f == \"Gaussian\":\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
+      "[[0. 0.]]\n",
       "[[0. 0.]]\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'Eige_data_data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[25], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#Necesitamos un array que use los puntos circundantes\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m#y con esto los mandamos para hacer la suma de matrices\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m,N):\n\u001b[1;32m----> 5\u001b[0m     normal \u001b[38;5;241m=\u001b[39m \u001b[43mnormal_metodo_optimizacion\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpts_nhd\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mpts_g\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mpt_f_c\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m:\u001b[49m\u001b[38;5;241;43m7\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[43m                                         \u001b[49m\u001b[43mpt_c\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mpts_g\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mpt_f_c\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[43m                                         \u001b[49m\u001b[43mf\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m1\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      8\u001b[0m \u001b[43m                                         \u001b[49m\u001b[43mFigura\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mpoly\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[24], line 505\u001b[0m, in \u001b[0;36mnormal_metodo_optimizacion\u001b[1;34m(pts_nhd, pt_c, f, Figura)\u001b[0m\n\u001b[0;32m    502\u001b[0m Eigen_data_data \u001b[38;5;241m=\u001b[39m C_eigen_normal(sum_M,pt_c_u,Figura)\n\u001b[0;32m    504\u001b[0m \u001b[38;5;66;03m#Ya con el eigenvector normal ya devolvemos la informacion que queremos\u001b[39;00m\n\u001b[1;32m--> 505\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mEige_data_data\u001b[49m[\u001b[38;5;241m0\u001b[39m]\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'Eige_data_data' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\andre\\AppData\\Local\\Temp\\ipykernel_6460\\1244501026.py:291: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
+      "  if f == \"Gaussian\":\n"
      ]
     }
    ],
@@ -1083,8 +1188,35 @@
     "    normal = normal_metodo_optimizacion(pts_nhd = pts_g[0]['pt_f_c'][3:7],\n",
     "                                         pt_c = pts_g[0]['pt_f_c'][4],\n",
     "                                         f = '1',\n",
-    "                                         Figura = poly)"
+    "                                         Figura = poly)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "4292ffed-d15c-4db1-8b68-321e5b8faa9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-0.8644248450856107, 0.5027620582330354)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fd0502f-1596-4f12-87ab-c0eb421cf2f8",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
