--- a/Meshfree_AdvancingFront.ipynb
+++ b/Meshfree_AdvancingFront.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "02a37a1e-ef35-4c4d-83e3-315bafc13d53",
    "metadata": {},
    "outputs": [],
@@ -41,16 +41,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3355c59c-ceec-449b-8616-dbe031a4bc83",
+   "metadata": {},
+   "source": [
+    "## Funciones auxiliares\n",
+    "\n",
+    "Aquí se encuentran las funciones que no tienen procedimientos tan extensos, si no que \n",
+    "se han hecho para ser llamadas por las funciones principales"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 87,
-   "id": "ee3b23f4-6028-4f0b-99a7-7bfb007781d9",
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 3,
+   "id": "85ec7b29-6752-416b-acf5-82014ac1c394",
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Funciones\n",
-    "\n",
     "\n",
     "def distancia_de_un_punto_a_otros(zz,punto):\n",
     "    \"\"\"\n",
@@ -139,7 +147,31 @@
     "    y=0\n",
     "    xx = np.array(x,copy=True)\n",
     "    y = a*xx + b\n",
-    "    return y\n",
+    "    return y\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95faae15-1a88-420f-ade7-38a71a015663",
+   "metadata": {},
+   "source": [
+    "## Funciones secundarias\n",
+    "Estas funciones tienen como común denominador que:\n",
+    " -  Tienen uno o varios ciclos en su interior\n",
+    " -  Son procesos largos que si estuvieran en un solo\n",
+    "     segmento de código se volverían muy dificil de\n",
+    "     de"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "ee3b23f4-6028-4f0b-99a7-7bfb007781d9",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "\n",
     "#Esta funcion tiene como objetivo calcular las pendientes de multiples rectas \n",
     "#en las que cada una pasa sobre dos puntos\n",
@@ -296,9 +328,13 @@
     "\n",
     "        print(\"Se crean los hilos\")\n",
     "        #El numero de hilos sera segun el numero de cores q tengamos\n",
-    "\n",
+    "        \n",
+    "        #Aquí se calculara el numero de \n",
+    "        diferencia = round(N_f/cores)\n",
     "        for n in range(cores):\n",
-    "                diferencia = round(N_f/16)\n",
+    "                \n",
+    "                startin =n*diferencia + (n>0)\n",
+    "                finalin =(n+1)*diferencia\n",
     "                hilo = Process(target = funcion, args=())\n",
     "                #Los adicionamos a la lista de procesos\n",
     "                hilos.append(hilo)\n",
