Prueba de doble guardado
Prueba

--- a/Meshfree_AdvancingFront.ipynb
+++ b/Meshfree_AdvancingFront.ipynb
@@ -27,7 +27,10 @@
     "from multiprocessing import Process,Pool\n",
     "import os\n",
     "import time\n",
-    "import psutil"
+    "import psutil\n",
+    "\n",
+    "#Funciones para paralelizar\n",
+    "import vecindad_paralelo as vp"
    ]
   },
   {
@@ -354,25 +357,53 @@
     "    return\n",
     "\"\"\"\n",
     "\n",
-    "def vecindad_paralelo_estructura(h,N_f,pts_vec,pt_g_u):\n",
+    "def vecindad_paralelo_estructura(h,N_f,pt_g_u):\n",
+    "    \"\"\"\n",
+    "    El objetivo de la funcion es mandar varios puntos al mismo tiempo para encontrar sus respectivas vecindades\n",
     "    \n",
+    "    \"\"\"\n",
     "    #Calculamos la cantidad de nucleos que tenemos disponibles\n",
     "    cores = os.cpu_count()  \n",
     "    \n",
-    "    #Este for se encargara de dividir los datos de x en una lista para poder pasarlos a la\n",
+    "    #Este for se encargara de dividir los datos de pt_g_u en una lista para poder pasarlos a la\n",
     "    #funcion map\n",
+    "    \n",
+    "    #Tenemos la varibale en donde se guardaran los argumentos que pasaremos\n",
     "    lista = []\n",
+    "    \n",
+    "    #Lo que nos dará la pauta de en cuanto dividiremos el arreglo\n",
     "    N = round(len(pt_g_u)/cores)\n",
-    "    N_f = 0\n",
-    "    N_i = 0\n",
+    "    Nf = 0\n",
+    "    Ni = 0\n",
+    "    \n",
+    "    #Se empiezan a guardar los datos que queremos \n",
+    "    \n",
+    "    \"\"\"\n",
+    "    Lo que se hace es que se pasan los argumentos que pasaremos a cada funcion\n",
+    "    en cada core en forma de lista, tal que:\n",
+    "        h es la distancia a la que buscaremos la vecindad de los puntos\n",
+    "        Ni,Nf representaran el slice de elementos que son los\n",
+    "              puntos a los que se les buscarán sus vecindades en ese core\n",
+    "        pt_g_u solamente es el arreglo de puntos con los que se comparara su distancia a cada \n",
+    "                punto central en cada core\n",
+    "    \"\"\"\n",
     "    for i in range(0,cores):\n",
-    "        N_i= i*N \n",
-    "        N_f= (i+1)*N\n",
+    "        Ni= i*N \n",
+    "        Nf= (i+1)*N\n",
     "        if i==(cores-1):\n",
-    "            N_f = len(pt_g_u)\n",
-    "        lista.append(pt_g_u[N_i:N_f])\n",
+    "            Nf = len(pt_g_u)\n",
+    "        lista.append((h,Ni,Nf,pt_g_u))\n",
+    "    #Se hace el procesado paralelizado\n",
+    "    if __name__=='__main__':\n",
+    "        \"\"\"\n",
+    "        Pool(processes=cores) -> Nos dice cuantos procesos se van a crear\n",
+    "                                 y si son menos de los que se aplican en .map()\n",
+    "                                 se van a poner en cola hasta que acaben los otros\n",
+    "        \"\"\"\n",
+    "        with Pool(processes=cores) as p:\n",
+    "            m = p.starmap(vp.vecindad_paralelo_proceso,lista)\n",
     "\n",
-    "    return\n"
+    "    return m\n"
    ]
   },
   {
