Creating_distancia_de_un_punto_a_otros_condicion
Que es una funcion que si se cumple que hay una distancia a otro punto que es menor a la distancia condicion regresara false que significa que el punto esta demasiado cerca de otro

--- a/Meshfree_AdvancingFront.ipynb
+++ b/Meshfree_AdvancingFront.ipynb
@@ -100,6 +100,37 @@
     "\n",
     "    return distancia_minima\n",
     "\n",
+    "def distancia_de_un_punto_a_otros_condicion(zz,punto,distancia_condicion):\n",
+    "    \"\"\"\n",
+    "    Si Observa que la distancia minima calculada de un punto a otro punto es\n",
+    "    menor a la distancia condicion parara y regresará False\n",
+    "    En el caso de que no haya ninguna distancia minima menor a la distancia_condicion\n",
+    "    regresará True\n",
+    "    zz    -> Arreglo numpy de dimensiones(N,2)\n",
+    "    punto -> coordenadas de un punto (x,y)\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    z= np.array(zz,copy=True)\n",
+    "    \n",
+    "    #Ahora calcularemos las distancias de este punto con los demás\n",
+    "    distancia = 0\n",
+    "    for i in range(0,len(zz)):\n",
+    "        \n",
+    "            #Calculamos la distancia entre el punto i y el punto j\n",
+    "            distancia =   Point(z[i,0],z[i,1]).distance(Point(punto[0],punto[1]))\n",
+    "            \n",
+    "            #Si la distancia calculada es menor a la distancia condicion parara\n",
+    "            #el proceso y regresará este valor\n",
+    "            if distancia_condicion>distancia and distancia != 0:\n",
+    "                #El punto esta demasiado cerca a otro\n",
+    "                return False\n",
+    "    \n",
+    "    #Si no encontro ningun valor menor a la distancia condicion regresará True\n",
+    "    #el punto esta lo suficientemente a lejado de los demás\n",
+    "    return True\n",
+    "\n",
+    "\n",
+    "\n",
     "#Funciones\n",
     "\n",
     "def distancia_de_un_punto_a_otros_identificador(zz,punto):\n",
