distancioa_minima_condicion
Se ha actualizado la funcion para que si ya no se cumple con un punto la distancia minima, se calcule un nuevo pt aleatorio

--- a/Meshfree_AdvancingFront.ipynb
+++ b/Meshfree_AdvancingFront.ipynb
@@ -1301,7 +1301,7 @@
     "            pt_ale[1] = (r_exterior*mt.sin(2*mt.pi*rd.random()) + pts_g[0]['pt_f_c'][i,1])\n",
     "            \n",
     "            #Calculamos la distancia de este punto con los otros\n",
-    "            distancia_minima_ale_otros =  distancia_de_un_punto_a_otros(pts_g[0]['pt_f_c'][:N+cant_pt_cumplidos,:],pt_ale)\n",
+    "            distancia_minima_ale_otros =  distancia_de_un_punto_a_otros_condicion(pts_g[0]['pt_f_c'][:N+cant_pt_cumplidos,:],pt_ale,r_exterior)\n",
     "            #print(distancia_minima_ale_otros)\n",
     "           # print(\"distancia_minima_ale_otros:\", distancia_minima_ale_otros)\n",
     "            #Si el punto esta entre las circunferencias que buscamos\n",
