--- a/Meshfree_AdvancingFront.ipynb
+++ b/Meshfree_AdvancingFront.ipynb
@@ -1718,22 +1718,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 125,
    "id": "281280a3-1185-4812-91b8-e9a0163d90f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "609\n",
+      "hay algo dy\n",
+      "hay algo dy\n",
+      "hay algo dy\n",
+      "hay algo dy\n",
+      "hay algo dy\n",
+      "hay algo dy\n",
+      "hay algo dy\n",
+      "hay algo dy\n",
+      "hay algo dy\n",
+      "hay algo dy\n",
+      "hay algo dy\n",
+      "hay algo dy\n",
+      "hay algo dy\n",
+      "hay algo dy\n",
+      "hay algo dy\n",
+      "hay algo dy\n",
+      "hay algo dy\n",
+      "hay algo dy\n",
+      "hay algo dy\n",
+      "hay algo dy\n",
+      "hay algo dy\n",
+      "hay algo dy\n",
+      "hay algo dy\n",
+      "hay algo dy\n",
+      "hay algo dy\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.65182553, 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        ],\n",
+       "       [0.        , 0.52931685, 0.        , 0.        , 0.        ,\n",
+       "        0.        ],\n",
+       "       [0.        , 0.        , 0.8969132 , 0.        , 0.        ,\n",
+       "        0.        ],\n",
+       "       [0.        , 0.        , 0.        , 0.8969132 , 0.        ,\n",
+       "        0.        ],\n",
+       "       [0.        , 0.        , 0.        , 0.        , 0.38840333,\n",
+       "        0.        ],\n",
+       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.38959133]])"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n",
-    "def M2D_matriz_generation(pt_central,pts_vecinos_c):\n",
+    "h=1\n",
+    "def W_matriz_generation(pt_central,pts_vecinos_c,h,a):\n",
+    "    W = np.zeros((6,6),np.float64)\n",
+    "    a = 1\n",
+    "    \n",
+    "    for i in range(0,6):\n",
+    "        mag2 = (pt_central[0] - pts_vecinos_c[i,0])**2 + (pt_central[1] - pts_vecinos_c[i,1])**2\n",
+    "        peso = np.exp(-a*  (  mag2 /h**2 )   )\n",
+    "        W[i,i] = peso\n",
+    "    return W\n",
+    "def M2D_matriz_generation(pt_central,pts_vecinos_c,h):\n",
     "    \"\"\"\n",
     "    El objetivo de la función es generar la matriz M que\n",
-    "    nos ayudará a solucionar la expansion de Taylor para la funcion\n",
-    "    f(x_i) = f(x) + f_k (x^k)\n",
+    "    nos ayudará a solucionar la expansion de Taylor para una funcion\n",
+    "    alrededor del punto_central que esta dada por la ecucacion\n",
+    "    \n",
+    "    f(pt_i) = f(pt) \n",
+    "    \n",
+    "    + \\sumk_1^2 f_k(pt) (x_k,i - x_k)\n",
+    "    \n",
+    "    + \\sumk,l_1^2 f_k,l(pt) (x_k,i  -  x_k)(x_l,i - x_l)\n",
+    "    \n",
     "    \"\"\"\n",
     "\n",
-    "renglones = 3\n",
-    "M = np.zeros((renglones,6),np.float64)\n",
-    "\n"
+    "    M = np.zeros((6,6),np.float64)\n",
+    "    \n",
+    "    for i in range(0,6):\n",
+    "        dx = pts_vecinos_c[i,0] - pt_central[0]\n",
+    "        dy = pts_vecinos_c[i,1] - pt_central[1]\n",
+    "        \n",
+    "        if dx ==0:\n",
+    "            print(\"hay algo dx\")\n",
+    "            dx = pts_vecinos_c[8,0] - pt_central[0]\n",
+    "        if dy ==0:\n",
+    "            print(\"hay algo dy\")\n",
+    "            dy = pts_vecinos_c[8,1] - pt_central[1]\n",
+    "            \n",
+    "        if dx==0 or dy==0:\n",
+    "            print(\"no se resolvio\")\n",
+    "        dxdy = 0.5*dx*dy\n",
+    "        dx2 = (dx**2)/2\n",
+    "        dy2 = (dy**2)/2\n",
+    "        \n",
+    "        M[i,:] = 1,dx,dy,dx2,dxdy,dy2\n",
+    "    \n",
+    "    W =  W_matriz_generation(pt_central,pts_vecinos_c,h,1)\n",
+    "    return M,W\n",
+    "\n",
+    "\n",
+    "lista_M = []\n",
+    "lista_a = []\n",
+    "print(N_f)\n",
+    "for i in range(0,N_f):\n",
+    "    aux = M2D_matriz_generation(pts_g[0]['pt_f_c'][i,:],pts_veci[i][:9],h)\n",
+    "    lista_M.append( aux )\n",
+    "    \n",
+    "    aa = np.linalg.inv(lista_M[i][0].T*lista_M[i][1]*lista_M[i][0])*(lista_M[i][0].T*lista_M[i][1])\n",
+    "    lista_a.append(  aa  )\n",
+    "\n",
+    "\n",
+    "np.linalg.inv(lista_M[608][0])\n",
+    "lista_M[0][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "478c2bdf-af5f-4964-b659-96efe16e816a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([ 5.33048846, -3.66522847]),\n",
+       " array([[ 4.56810195, -3.92729884],\n",
+       "        [ 4.90164605, -3.78435137],\n",
+       "        [ 5.78315545, -3.66522847],\n",
+       "        [ 6.14052413, -3.71287763],\n",
+       "        [ 4.64716231, -3.60707134],\n",
+       "        [ 5.08283748, -3.50873232]]))"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i=18\n",
+    "pts_g[0]['pt_f_c'][i,:],pts_veci[i][:6]"
    ]
   },
   {
