Matrices a arreglo provisional
Se ha hecho un arreglo provisional por lo pronto

--- a/Meshfree_AdvancingFront.ipynb
+++ b/Meshfree_AdvancingFront.ipynb
@@ -1713,12 +1713,12 @@
    "id": "448d3e72-68d9-4dbb-87cf-d94b874c8134",
    "metadata": {},
    "source": [
-    "El"
+    "Hace falta mejorar en los casos en que un punto tenga un valor con dx=0 o dy=0, por que generan matrices singulares. Lo que buscamos es que esto se resuelva con algun otro punto cercano en lugar de ese"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 126,
    "id": "281280a3-1185-4812-91b8-e9a0163d90f7",
    "metadata": {},
    "outputs": [
@@ -1771,7 +1771,7 @@
        "        0.38959133]])"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1783,7 +1783,12 @@
     "    a = 1\n",
     "    \n",
     "    for i in range(0,6):\n",
-    "        mag2 = (pt_central[0] - pts_vecinos_c[i,0])**2 + (pt_central[1] - pts_vecinos_c[i,1])**2\n",
+    "        dx = pts_vecinos_c[i,0] - pt_central[0]\n",
+    "        dy = pts_vecinos_c[i,1] - pt_central[1]\n",
+    "        mag2 = (dx)**2 + (pt_central[1] - pts_vecinos_c[i)**2\n",
+    "        \n",
+    "        if mag2 ==0:\n",
+    "            print(\"hay algo W\")\n",
     "        peso = np.exp(-a*  (  mag2 /h**2 )   )\n",
     "        W[i,i] = peso\n",
     "    return W\n",
