identificador_colores_update
Mejor documentacion

--- a/Meshfree_AdvancingFront.ipynb
+++ b/Meshfree_AdvancingFront.ipynb
@@ -1163,7 +1163,7 @@
     "\n",
     "#Guardamos los puntos de la figura en el arreglo\n",
     "pts_g[0]['pt_f_c'][:len(Figura),:] = Figura[:,:]\n",
-    "#Le damos el color a los puntos del contorno\n",
+    "#Le damos el color a los puntos del contorno que sera identificado con el 0\n",
     "pts_g[0]['Color'][:len(Figura)] = 0\n",
     "\n",
     "#Calcularemos las pendientes de todo\n",
@@ -1300,6 +1300,7 @@
     "                #Si cumple con todas esas condiciones guardamos el punto\n",
     "                pts_g[0]['pt_f_c'][N  +cant_pt_cumplidos,0] = pt_ale[0]\n",
     "                pts_g[0]['pt_f_c'][N  +cant_pt_cumplidos,1] = pt_ale[1]\n",
+    "                #Como estos son puntos dentro del contorno entonces el color es identificado con el 1\n",
     "                pts_g[0]['Color'][N   +cant_pt_cumplidos] = 1\n",
     "                #pt_f_c_x_animation[:,cant_pt_cumplidos] = pts_g[0]['pt_f_c'][:,0]\n",
     "                #pt_f_c_y_animation[:,cant_pt_cumplidos] = pts_g[0]['pt_f_c'][:,1]\n",
